--- a/src/index.css
+++ b/src/index.css
@@ -12,6 +12,7 @@
 body {
   font-family: "Work Sans", sans-serif;
   scroll-behavior: smooth;
+  background-color: #000;
 }
 
 body:has(.card[data-color="blue"]:hover) {
